@@ -813,6 +813,15 @@ extern custom_options_type custom_defaults INIT(= {
 		.tbl_cutscenes_by_index = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15},
 		.tbl_entry_pose = {0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0},
 		.tbl_seamless_exit = {-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 23, -1, -1, -1},
+
+		// guard skills
+		.strikeprob    = { 61,100, 61, 61, 61, 40,100,220,  0, 48, 32, 48},
+		.restrikeprob  = {  0,  0,  0,  5,  5,175, 16,  8,  0,255,255,150},
+		.blockprob     = {  0,150,150,200,200,255,200,250,  0,255,255,255},
+		.impblockprob  = {  0, 61, 61,100,100,145,100,250,  0,145,255,175},
+		.advprob       = {255,200,200,200,255,255,200,  0,  0,255,100,100},
+		.refractimer   = { 16, 16, 16, 16,  8,  8,  8,  8,  0,  8,  0,  0},
+		.extrastrength = {  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0},
 });
 extern custom_options_type* custom INIT(= &custom_defaults);
 
